--- a/urlshortnerapp/templates/index.html
+++ b/urlshortnerapp/templates/index.html
@@ -55,15 +55,15 @@ input {
   display: flex;
 }
 
-/*button {*/
-/*  cursor: pointer;*/
-/*  flex: 1;*/
-/*  background-color: transparent;*/
-/*  color: white;*/
-/*  &:hover {*/
-/*    background-color: rgba(255, 255, 255, 0.5);*/
-/*  }*/
-/*}*/
+button {
+  cursor: pointer;
+  flex: 1;
+  background-color: transparent;
+  color: white;
+  /*&:hover {*/
+  /*  background-color: rgba(255, 255, 255, 0.5);*/
+  /*}*/
+}
 
 section {
   min-height: 120px;
